--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -19,6 +19,6 @@
             </div>
             <a href="" class="nav-item nav-link">Contact</a>
         </div>
-        <a href="" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Post A Job<i class="fa fa-arrow-right ms-3"></i></a>
+        <a href="reg" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block" id="changable">Registration <i class="fa fa-arrow-right ms-3"></i></a>
     </div>
 </nav>
