--- a/views/uploadResume.ejs
+++ b/views/uploadResume.ejs
@@ -32,6 +32,7 @@
 </head>
 <body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://kit.fontawesome.com/ee4053c9b9.js" crossorigin="anonymous"></script>
     <div class="container-xxl bg-white p-0">
         <!-- Spinner Start -->
         <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
@@ -87,8 +88,8 @@
             </div>
         </div>
 
-        <div>
-            <p id="info"></p>
+        <div id="job-list" style="margin-top: 4%;width: 1000px;margin-left: 13%;">
+
         </div>
 
         </div>
