--- a/views/reg.ejs
+++ b/views/reg.ejs
@@ -78,17 +78,17 @@
 
 
                     
-                    <form class="form" id="Form2">
+                    <form class="form" id="Form2" method="post" action="/reg">
                         <p class="title margintitle">Sign in </p>
                         <p class="message">Sign in now and get full access to our app. </p>       
                         <label class="spacingbet">
-                            <input required="" placeholder="Email" type="email" class="input">
+                            <input required="" placeholder="Email" id="inemail" type="email" class="input">
                             <div id='semailerr' class='err'></div>
                             <i class="error-icon fas fa-exclamation-circle" id="er4"></i>
                         </label> 
                             
                         <label class="spacingbet"> 
-                            <input required="" placeholder="Password" type="password" class="input">
+                            <input required="" placeholder="Password" id="inpass" type="password" class="input">
                             <div id='spasserr' class='err'></div>
                             <i class="error-icon fas fa-exclamation-circle" id="er5"></i>
                    
