--- a/public/css/reg.css
+++ b/public/css/reg.css
@@ -275,3 +275,8 @@
   #accessibilityDropdown:hover {
       border-color: #999;
   }
+  #inemail
+  {
+    margin-bottom: 5%;
+    margin-top: 5%;
+  }
