--- a/views/reg.ejs
+++ b/views/reg.ejs
@@ -81,13 +81,13 @@
                     <form class="form" id="Form2" method="post" action="/reg">
                         <p class="title margintitle">Sign in </p>
                         <p class="message">Sign in now and get full access to our app. </p>       
-                        <label class="spacingbet">
+                        <label class="spacingbet morespacing">
                             <input required="" placeholder="Email" id="inemail" type="email" class="input">
                             <div id='semailerr' class='err'></div>
                             <i class="error-icon fas fa-exclamation-circle" id="er4"></i>
                         </label> 
                             
-                        <label class="spacingbet"> 
+                        <label class="spacingbet morespacing"> 
                             <input required="" placeholder="Password" id="inpass" type="password" class="input">
                             <div id='spasserr' class='err'></div>
                             <i class="error-icon fas fa-exclamation-circle" id="er5"></i>
