--- a/views/uploadResume.ejs
+++ b/views/uploadResume.ejs
@@ -68,7 +68,7 @@
 
         <div class="main-container">
             <div class="upload-container">
-                <form id="upload-form" action="/uploadResume" method="post" enctype="multipart/form-data">
+                <form id="upload-form" method="post" action="/uploadResume"  enctype="multipart/form-data">
                     <label for="resume-upload" class="upload-button" id="uploadLabel" >Upload Resume</label>
                     <input type="file" id="resume-upload" name="resume" class="hidden">
                </form>  
@@ -79,7 +79,7 @@
                     <button id="openPopup">View Resume</button>
                 </div>
                 <div style="margin-left: 5%;">
-                    <form id="edit-form" action="/uploadResume/edit" method="post" enctype="multipart/form-data">
+                    <form id="edit-form" method="post" action="/uploadResume/filter/edit"  enctype="multipart/form-data">
                         <input type="file" id="resume-edit" name="newResume" class="hidden">
                         <label for="resume-edit" id="edit-button" >Edit Resume</label>
                    </form>  
