--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -9,11 +9,11 @@
         <div class="navbar-nav ms-auto p-4 p-lg-0">
             <a href="index" class="nav-item nav-link active">Home</a>
             <a href="" class="nav-item nav-link">About</a>
-            <a href="uploadResume" class="nav-item nav-link">Upload Resume</a>
+            <a href="/uploadResume" class="nav-item nav-link">Upload Resume</a>
             <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Jobs</a>
                 <div class="dropdown-menu rounded-0 m-0">
-                    <a href="" class="dropdown-item">Job List</a>
+                    <a href="/appliedfor" class="dropdown-item">Job List</a>
                     <a href="" class="dropdown-item">Job Detail</a>
                 </div>
             </div>
