--- a/public/css/style.css
+++ b/public/css/style.css
@@ -398,3 +398,20 @@
     padding-right: 0;
     border-right: none;
 }
+.fade-label {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+    opacity: 0.8;
+    transition: 0.5s ease-out all;
+    background-color: lightgrey;
+    color: green;
+    border: 1px black;
+    border-radius: 20px;
+    padding: 1%;
+  }
+  .hidden {
+    display: none;
+  }
