--- a/views/job-detail.ejs
+++ b/views/job-detail.ejs
@@ -64,6 +64,8 @@
 
 
         <!-- Job Detail Start -->
+
+          <!-------->
         <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
             <div class="container">
                 <div class="row gy-5 gx-4">
@@ -71,57 +73,37 @@
                         <div class="d-flex align-items-center mb-5">
                             <img class="flex-shrink-0 img-fluid border rounded" src="img/com-logo-2.jpg" alt="" style="width: 80px; height: 80px;">
                             <div class="text-start ps-4">
-                                <h3 class="mb-3">Marketing Manager</h3>
-                                <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>New York, USA</span>
-                                <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>Full Time</span>
-                                <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>$123 - $456</span>
+
+                                  <!-------->
+                                <h3 class="mb-3"><%= jobDetails.Name %></h3>
+                                <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i><%= jobDetails.Place %></span>
+                                <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i><%= jobDetails.Location %></span>
+                                <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i><%= jobDetails.Salary %></span>
                             </div>
                         </div>
 
                         <div class="mb-5">
                             <h4 class="mb-3">Job description</h4>
-                            <p>Dolor justo tempor duo ipsum accusam rebum gubergren erat. Elitr stet dolor vero clita labore gubergren. Kasd sed ipsum elitr clita rebum ut sea diam tempor. Sadipscing nonumy vero labore invidunt dolor sed, eirmod dolore amet aliquyam consetetur lorem, amet elitr clita et sed consetetur dolore accusam. Vero kasd nonumy justo rebum stet. Ipsum amet sed lorem sea magna. Rebum vero dolores dolores elitr vero dolores magna, stet sea sadipscing stet et. Est voluptua et sanctus at sanctus erat vero sed sed, amet duo no diam clita rebum duo, accusam tempor takimata clita stet nonumy rebum est invidunt stet, dolor.</p>
-                            <h4 class="mb-3">Responsibility</h4>
-                            <p>Magna et elitr diam sed lorem. Diam diam stet erat no est est. Accusam sed lorem stet voluptua sit sit at stet consetetur, takimata at diam kasd gubergren elitr dolor</p>
-                            <ul class="list-unstyled">
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Dolor justo tempor duo ipsum accusam</li>
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Elitr stet dolor vero clita labore gubergren</li>
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Rebum vero dolores dolores elitr</li>
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Est voluptua et sanctus at sanctus erat</li>
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Diam diam stet erat no est est</li>
-                            </ul>
+                            <!-- -->
+                            <p><%= jobDetails.Description %></p>
+                            
                             <h4 class="mb-3">Qualifications</h4>
-                            <p>Magna et elitr diam sed lorem. Diam diam stet erat no est est. Accusam sed lorem stet voluptua sit sit at stet consetetur, takimata at diam kasd gubergren elitr dolor</p>
+                         
+                        
+                            
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Dolor justo tempor duo ipsum accusam</li>
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Elitr stet dolor vero clita labore gubergren</li>
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Rebum vero dolores dolores elitr</li>
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Est voluptua et sanctus at sanctus erat</li>
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Diam diam stet erat no est est</li>
+                                <% jobDetails.Skills.forEach(skill => { %>
+                                    <li><i class="fa fa-angle-right text-primary me-2"></i><%= skill %></li>
+                                <% }); %>
                             </ul>
                         </div>
-        
+     
                         <div class="">
-                            <h4 class="mb-4">Apply For The Job</h4>
+       
                             <form>
-                                <div class="row g-3">
-                                    <div class="col-12 col-sm-6">
-                                        <input type="text" class="form-control" placeholder="Your Name">
-                                    </div>
-                                    <div class="col-12 col-sm-6">
-                                        <input type="email" class="form-control" placeholder="Your Email">
-                                    </div>
-                                    <div class="col-12 col-sm-6">
-                                        <input type="text" class="form-control" placeholder="Portfolio Website">
-                                    </div>
-                                    <div class="col-12 col-sm-6">
-                                        <input type="file" class="form-control bg-white">
-                                    </div>
                                     <div class="col-12">
-                                        <textarea class="form-control" rows="5" placeholder="Coverletter"></textarea>
-                                    </div>
-                                    <div class="col-12">
-                                        <button class="btn btn-primary w-100" type="submit">Apply Now</button>
+                                        <button class="btn btn-primary w-100 apply-button" data-jobid="<%= jobDetails._id %>">Apply Now</button>
+                                        <label id="prop-label" class="fade-label hidden">Your Apply Have Been Submitted </label>
                                     </div>
                                 </div>
                             </form>
@@ -129,15 +111,7 @@
                     </div>
         
                     <div class="col-lg-4">
-                        <div class="bg-light rounded p-5 mb-4 wow slideInUp" data-wow-delay="0.1s">
-                            <h4 class="mb-4">Job Summery</h4>
-                            <p><i class="fa fa-angle-right text-primary me-2"></i>Published On: 01 Jan, 2045</p>
-                            <p><i class="fa fa-angle-right text-primary me-2"></i>Vacancy: 123 Position</p>
-                            <p><i class="fa fa-angle-right text-primary me-2"></i>Job Nature: Full Time</p>
-                            <p><i class="fa fa-angle-right text-primary me-2"></i>Salary: $123 - $456</p>
-                            <p><i class="fa fa-angle-right text-primary me-2"></i>Location: New York, USA</p>
-                            <p class="m-0"><i class="fa fa-angle-right text-primary me-2"></i>Date Line: 01 Jan, 2045</p>
-                        </div>
+                    
                         <div class="bg-light rounded p-5 wow slideInUp" data-wow-delay="0.1s">
                             <h4 class="mb-4">Company Detail</h4>
                             <p class="m-0">Ipsum dolor ipsum accusam stet et et diam dolores, sed rebum sadipscing elitr vero dolores. Lorem dolore elitr justo et no gubergren sadipscing, ipsum et takimata aliquyam et rebum est ipsum lorem diam. Et lorem magna eirmod est et et sanctus et, kasd clita labore.</p>
@@ -229,6 +203,56 @@
 
     <!-- Template Javascript -->
     <script src="/js/main.js"></script>
+    <script>
+   $(".apply-button").click(function (event) {
+  event.preventDefault(); // Prevent default form submission behavior
+  const jobId = $(this).data("jobid");
+  const button = $(this);
+
+  applyForJob(jobId, button);
+});
+
+function applyForJob(jobId, button) {
+  $.ajax({
+    url: `/job-detail/:id`,
+    method: "POST",
+    data: { jobId: jobId },
+    success: function (response) {
+      let label = document.getElementById('prop-label');
+      if (label) {
+        label.classList.remove('hidden');
+        setTimeout(function () {
+          label.classList.add('hidden');
+        }, 5000);
+      }
+
+      button.text("Applied");
+      button.attr("disabled", true);
+
+      // Store the applied job ID in local storage
+      const appliedJobIds = JSON.parse(localStorage.getItem("appliedJobIds")) || [];
+      appliedJobIds.push(jobId);
+      localStorage.setItem("appliedJobIds", JSON.stringify(appliedJobIds));
+    },
+    error: function (err) {
+      console.log("Error submitting application:", err);
+    },
+  });
+}
+
+// When the page loads, retrieve applied job IDs from local storage and update buttons
+$(document).ready(function () {
+  const appliedJobIds = JSON.parse(localStorage.getItem("appliedJobIds")) || [];
+
+  $(".apply-button").each(function () {
+    const jobId = $(this).data("jobid");
+    if (appliedJobIds.includes(jobId)) {
+      $(this).text("Applied").attr("disabled", true);
+    }
+  });
+});
+
+    </script>
 </body>
 
 </html>
