--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
-    <a href="index" class="navbar-brand d-flex align-items-center text-center py-0 px-4 px-lg-5">
+    <a href="/" class="navbar-brand d-flex align-items-center text-center py-0 px-4 px-lg-5">
         <h1 class="m-0 text-primary">JobEntry</h1>
     </a>
     <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -7,7 +7,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
-            <a href="index" class="nav-item nav-link active">Home</a>
+            <a href="/" class="nav-item nav-link active">Home</a>
             <a href="" class="nav-item nav-link">About</a>
             <a href="/uploadResume" class="nav-item nav-link">Upload Resume</a>
             <div class="nav-item dropdown">
