--- a/public/css/reg.css
+++ b/public/css/reg.css
@@ -15,7 +15,8 @@
 @font-face {
     font-family: 'Degular';
     src: url(fonts/Degular-Light.ttf);
-}.background1
+}
+.background1
 {
     width: 86%;
     height: 620px;
