--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,3 +1,22 @@
+@import "https://unpkg.com/open-props";
+@import url('https://fonts.googleapis.com/css?family=Lato:400,500,600,700&display=swap');
+
+@font-face {
+    font-family: 'BW Gradual';
+    src: url(fonts/BwGradualDEMO-Light.ttf);
+}
+
+@font-face {
+    font-family: 'BW Gradual Bold';
+    src: url(fonts/BwGradualDEMO-Bold.ttf);
+}
+
+@font-face {
+    font-family: 'Degular';
+    src: url(fonts/Degular-Light.ttf);
+}
+
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -50,10 +69,12 @@ body {
   .filter-section {
     background-color: #ffffff;
     margin-left: 5%;
-    width:900px;
+    width:1000px;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    margin-bottom: 3%;
+    margin-left: 3%;
   }
   
   #job-select,#company-select {
@@ -63,16 +84,21 @@ body {
 
   #filter-button {
     padding: 8px 15px;
+    font-size: 16px;
     background-color: #2a3766;
     color: white;
+    font-family: 'BW Gradual Bold';
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    width: 100px;
+    width: 300px;
+    display: block;
+    margin-top: 3%;
+    margin-left: 20%;
   }
   
   .applicant-list {
-    display: flex;
+    display: block;
     flex-wrap: wrap;
     justify-content: center;
     align-items: flex-start;
@@ -85,9 +111,10 @@ body {
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 6px;
     padding: 20px;
-    margin: 10px;
-    width: 300px;
+    margin-top: 2%;
+    width: 1000px;
     text-align: center;
+    display: flex;
   }
   
   .applicant h4 {
@@ -143,7 +170,7 @@ body {
   
   .view-resume-button {
     display: inline-block;
-    margin-top: 15px;
+    margin-top: 0px;
     padding: 10px 20px;
     background-color: #2a3766;
     color: #ffffff;
@@ -151,8 +178,9 @@ body {
     border-radius: 4px;
     text-decoration: none;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 10px;
     transition: background-color 0.3s, transform 0.2s;
+    text-align: left;
   }
 
   .view-resume-button:hover {
@@ -164,8 +192,41 @@ body {
     background-color: #4c5b91;
     transform: scale(1);
   }
-  
-  
-  
-  
-  
+
+  .title12
+  {
+    font-size: 40px;
+    font-family: 'BW Gradual Bold';
+    margin-left: 30%;
+    margin-bottom: 2%;
+  }
+  .filter1
+  {
+    margin-left: 20%;
+   
+  }
+  .form12
+  {
+    width:1000px;
+    margin-left: 10%;
+  }
+  .filterapp
+  {
+    margin-left: 1%;
+    margin-bottom: 2%;
+    font-size: 22px;
+  }
+.options
+{
+  color: #333333;
+  font-size: 16px;
+  font-family: 'BW Gradual Bold';
+}
+.selecting
+{
+  width: 250px;
+  min-width: 250px;
+  border: 2px solid rgb(30, 30, 72);
+  font-size: 14px;
+}
+
