--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -5,31 +5,129 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="/css/dashboard.css">
+    <link rel="stylesheet" href="/css/aside.css">
+    <link rel="stylesheet" href="./css/fonts.css">
+
 </head>
 <body>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-    <div id="sidebar">
-        <div class="header">Admin Dashboard</div>
-        <a class="nav-link" href="#">Dashboard</a>
-        <a class="nav-link" href="#">Job Listings</a>
-        <a class="nav-link" href="#">Applicants</a>
-        <a class="nav-link" href="#">Settings</a>
-        <a class="nav-link" href="#">Logout</a>
-    </div>
-    <div id="welcome-content">
-            <h1>Applicant Filtering</h1>
+    <aside>
+        <div class="top">
+            <div class="logo">
+                <svg width="25" height="30" viewBox="0 0 31 31" fill="none" xmlns="http://www.w3.org/2000/svg"
+                    style="color: white;">
+                    <g clip-path="url(#clip0)">
+                        <path
+                            d="M17.6056 8.59195C19.4697 6.72793 21.2813 5.51209 21.6437 5.87442C22.01 6.24079 20.7942 8.04845 18.9261 9.91247C17.0621 11.7765 15.2504 12.9923 14.8881 12.63C14.5258 12.2677 15.7416 10.456 17.6056 8.59195Z"
+                            fill="currentColor"></path>
+                        <path
+                            d="M14.6419 5.62436C16.5059 3.76034 18.3176 2.54449 18.68 2.91086C19.0463 3.27722 17.8305 5.08488 15.9624 6.94891C14.0984 8.81293 12.2867 10.0328 11.9244 9.66644C11.558 9.30008 12.7779 7.49241 14.6419 5.62436Z"
+                            fill="currentColor"></path>
+                        <path
+                            d="M11.6759 2.66143C13.54 0.797407 15.3517 -0.422464 15.714 -0.0560999C16.0804 0.310264 14.8645 2.11793 12.9965 3.98195C11.1324 5.84598 9.32074 7.06585 8.95841 6.69949C8.59607 6.33312 9.81191 4.52546 11.6759 2.66143Z"
+                            fill="currentColor"></path>
+                        <path
+                            d="M4.10305 17.4845C5.96707 19.3486 7.18694 21.1602 6.82058 21.5226C6.45422 21.8889 4.64655 20.6731 2.78253 18.8051C0.9185 16.941 -0.30137 15.1293 0.0649938 14.767C0.431357 14.4047 2.23902 15.6205 4.10305 17.4845Z"
+                            fill="currentColor"></path>
+                        <path
+                            d="M7.06984 14.5219C8.93387 16.386 10.1537 18.1977 9.78737 18.56C9.42101 18.9264 7.61335 17.7105 5.74932 15.8425C3.8853 13.9784 2.66543 12.1667 3.03179 11.8044C3.39413 11.438 5.20582 12.6539 7.06984 14.5219Z"
+                            fill="currentColor"></path>
+                        <path
+                            d="M10.0327 11.5548C11.8968 13.4189 13.1166 15.2306 12.7503 15.5929C12.3839 15.9593 10.5762 14.7434 8.71221 12.8754C6.84819 11.0113 5.62832 9.19965 5.99468 8.83731C6.36105 8.47498 8.16871 9.69082 10.0327 11.5548Z"
+                            fill="currentColor"></path>
+                        <path
+                            d="M17.8361 26.717C19.7001 24.8529 21.5118 23.6371 21.8741 23.9994C22.2405 24.3658 21.0247 26.1734 19.1566 28.0375C17.2926 29.9015 15.4809 31.1173 15.1186 30.755C14.7562 30.3886 15.9721 28.581 17.8361 26.717Z"
+                            fill="currentColor"></path>
+                        <path
+                            d="M14.8725 23.7492C16.7365 21.8852 18.5482 20.6693 18.9106 21.0316C19.2769 21.398 18.0611 23.2057 16.193 25.0697C14.329 26.9337 12.5173 28.1536 12.155 27.7872C11.7886 27.4249 13.0045 25.6172 14.8725 23.7492Z"
+                            fill="currentColor"></path>
+                        <path
+                            d="M11.9045 20.7864C13.7685 18.9224 15.5802 17.7025 15.9425 18.0689C16.3089 18.4353 15.093 20.2429 13.225 22.107C11.3609 23.971 9.54926 25.1908 9.18692 24.8245C8.82458 24.4581 10.0404 22.6505 11.9045 20.7864Z"
+                            fill="currentColor"></path>
+                        <path
+                            d="M22.1265 17.8195C23.9905 19.6835 25.2064 21.4952 24.844 21.8575C24.4777 22.2239 22.67 21.0081 20.806 19.14C18.9419 17.276 17.7221 15.4643 18.0884 15.102C18.4508 14.7396 20.2584 15.9555 22.1265 17.8195Z"
+                            fill="currentColor"></path>
+                        <path
+                            d="M25.0913 14.8559C26.9553 16.7199 28.1712 18.5316 27.8089 18.894C27.4425 19.2603 25.6348 18.0445 23.7708 16.1764C21.9068 14.3124 20.6869 12.5007 21.0533 12.1384C21.4156 11.772 23.2273 12.9879 25.0913 14.8559Z"
+                            fill="currentColor"></path>
+                        <path
+                            d="M28.0562 11.8888C29.9202 13.7529 31.1401 15.5645 30.7737 15.9269C30.4073 16.2932 28.5997 15.0774 26.7357 13.2094C24.8716 11.3453 23.6518 9.53364 24.0181 9.1713C24.3805 8.80896 26.1881 10.0248 28.0562 11.8888Z"
+                            fill="currentColor"></path>
+                    </g>
+                    <defs>
+                        <clipPath id="clip0">
+                            <rect width="31" height="31" fill="white"></rect>
+                        </clipPath>
+                    </defs>
+                </svg>
+                <h2 style="color: white;">RE<span style="color: white;">estate</span></h2>
+            </div>
+            <div class="close" id="close-btn">
+                <i class='bx bxs-log-out-circle'></i>
+            </div>
+        </div>
+
+        <div class="sidebar">
+            <a class="active" href="/dashboard">
+                <i class='bx bxs-grid-alt'></i>
+                <h3>Dashboard</h3>
+            </a>
+            <a href="/customers">
+                <i class='bx bxs-user-account'></i>
+                <h3>Add User</h3>
+            </a>
+            <!-- <a href="#">
+                <i class='bx bxs-chat'></i>
+                <h3>Messages</h3>
+                <span class="message-count">26</span>
+            </a> -->
+            <a href="/users">
+                <i class='bx bx-list-ol'></i>
+                <h3>Users</h3>
+            </a>
+            <a href="/pendadmins">
+                <i class='bx bx-error-circle'></i>
+                <h3>Pending Admins</h3>
+                <span class="message-count">26</span>
+            </a>
+            <a href="/pendingproperty">
+                <i class='bx bx-alarm-exclamation'></i>
+                <h3>Pending Property</h3>
+                <span class="message-count">302</span>
+            </a>
+            <a href="/addproperty">
+                <i class='bx bx-plus'></i>
+                <h3>Add Property</h3>
+            </a>
+            <a href="/">
+                <i class='bx bxs-log-out'></i>
+                <h3>Back</h3>
+            </a>
+        </div>
+    </aside>
+<!-- END OF ASIDE -->
+
+
+
+    <div class="filter1" id="welcome-content">
+            <div class="title12">Applicant Filtering</div>
         <div class="filter-section">
-        <h2>Filter Applicants</h2>
+        <h2 class="filterapp">Filter Applicants</h2>
         <div >
-            <form id="myForm" action="dashboard/filter" method="post" style="display: flex;">
+            <form class="form12" id="myForm" action="dashboard" method="post" >
+                <div style="display: flex;">
                 <div>
                     <label for="job-select">Select Job:</label>
-                    <select id="job-select" name="job">
-                        <option value="">select job</option>
+                    <select class="selecting" id="job-select" name="job">
+                        <% if(sortedData!=""){%>
+                            <option value=<%=job%><%=job%>></option>
+                        <%}else{%>
+                        <option class="options" value="">select job</option>
+                        <%}%>
                         <% if(jobs!==undefined){ %>
                             <% jobs.forEach(job=>{%>
-                            <option value=<%=job.Name%>><%=job.Name%></option>
+                            <option class="options" value=<%=job.Name%>><%=job.Name%></option>
                         <% }) %>
                         <% } %>
                     </select>
@@ -37,18 +135,21 @@
                 
                 <div style="margin-left: 50px;">
                     <label for="company-select">Select Company:</label>
-                    <select id="company-select" name="company" >
-                        <option value="">select company</option>
+                    <select class="selecting" id="company-select" name="company" >
+                        <% if(sortedData!=""){%>
+                            <option value=<%=company%><%=company%>></option>
+                        <%}else{%>
+                        <option class="options"  value="">select company</option>
+                        <%}%>
                         <% if(jobs!==undefined){ %>
                             <% jobs.forEach(job=>{%>
-                                <option value=<%=job.Company%> ><%=job.Company%></option>
+                                <option class="options" value=<%=job.Company%> ><%=job.Company%></option>
                         <% }) %>
                         <% } %>
                     </select>
                 </div>
-                <div style="margin-left: 90px; width: 100px;">
-                    <button id="filter-button" type="submit">Filter</button>
-                </div>
+            </div>               
+                    <button  id="filter-button" type="submit">Filter</button>
             </form>
         </div>
         </div>
@@ -57,10 +158,10 @@
             <div id="applicant-list" class="applicant-list">
                 <%for(var k=0;k<sortedData.length;k++){%>
                     <div id="user" class="applicant" >
-                        <h4 style="float:left;"><%=k+1%>-</h4>
-                        <h4>Name: <%=sortedData[k].user.Firstname%> <%=sortedData[k].user.Lastname%></h4>
-                        <h4>Email: <%=sortedData[k].user.email%></h4>
-                        <h4>Disability: <%=sortedData[k].user.accessibilityValue %></h4>
+                        <!-- <h4 style="float:left;"><%=k+1%>-</h4> -->
+                        <div>Name: <%=sortedData[k].user.Firstname%> <%=sortedData[k].user.Lastname%></div>
+                        <div>Email: <%=sortedData[k].user.email%></div>
+                        <div>Disability: <%=sortedData[k].user.accessibilityValue %></div>
                         <%var fileName=sortedData[k].user.email.substring(0, sortedData[k].user.email.indexOf("@")); %>
                         <a href="#" class="view-resume-button" 
                         onclick="openResumePopup('/uploads/'+'<%=fileName%>'+' resume.pdf')">View Resume</a>        
