--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -61,7 +61,7 @@
                         </clipPath>
                     </defs>
                 </svg>
-                <h2 style="color: white;">RE<span style="color: white;">estate</span></h2>
+                <h2 style="color: white;">Our<span style="color: white;">Name</span></h2>
             </div>
             <div class="close" id="close-btn">
                 <i class='bx bxs-log-out-circle'></i>
@@ -71,34 +71,15 @@
         <div class="sidebar">
             <a class="active" href="/dashboard">
                 <i class='bx bxs-grid-alt'></i>
-                <h3>Dashboard</h3>
+                <h3>Applicant Filtering</h3>
             </a>
-            <a href="/customers">
+            <a href="#">
                 <i class='bx bxs-user-account'></i>
-                <h3>Add User</h3>
+                <h3>Add Jobs</h3>
             </a>
-            <!-- <a href="#">
-                <i class='bx bxs-chat'></i>
-                <h3>Messages</h3>
-                <span class="message-count">26</span>
-            </a> -->
-            <a href="/users">
+            <a href="#">
                 <i class='bx bx-list-ol'></i>
-                <h3>Users</h3>
-            </a>
-            <a href="/pendadmins">
-                <i class='bx bx-error-circle'></i>
-                <h3>Pending Admins</h3>
-                <span class="message-count">26</span>
-            </a>
-            <a href="/pendingproperty">
-                <i class='bx bx-alarm-exclamation'></i>
-                <h3>Pending Property</h3>
-                <span class="message-count">302</span>
-            </a>
-            <a href="/addproperty">
-                <i class='bx bx-plus'></i>
-                <h3>Add Property</h3>
+                <h3>Chating</h3>
             </a>
             <a href="/">
                 <i class='bx bxs-log-out'></i>
